Created basic models and apis for jobs, locations and npcs.
