# libs/models/src/jobs/jobs-types.ts
@@ -1,0 +1,3 @@
+import { Job } from './jobs-classes';
+
+export type JobUpdateBody = Partial<Omit<Job, 'id'>>;
