# libs/models/src/locations/locations-enums.ts
@@ -1,0 +1,6 @@
+export enum LocationTypes {
+  CONTINENT = 'CONTINENT',
+  REALM = 'REALM',
+  CITY = 'CITY',
+  VILLAGE = 'VILLAGE',
+}
