# libs/models/src/locations/locations-types.ts
@@ -1,0 +1,3 @@
+import { Location } from './locations-classes';
+
+export type LocationUpdateBody = Partial<Omit<Location, 'id'>>;
