# libs/models/src/npcs/npcs-types.ts
@@ -1,0 +1,3 @@
+import { Npc } from './npcs-classes';
+
+export type NpcUpdateBody = Partial<Omit<Npc, 'id'>>;
